added final version of 05.03.02 - Tracked Propes and Error Handling

--- a/docs/05.03.02 - Monitoring Power Automate - Run Time - Tracked Properties and Error Handling.md
+++ b/docs/05.03.02 - Monitoring Power Automate - Run Time - Tracked Properties and Error Handling.md
@@ -8,19 +8,23 @@ If you have not already reviewed Part 1 in the Power Automate Run Time series, p
 
 ## Action Tracked Properties
 
-**Tracked Properties** are part of every action within Power Automate. [They provide the ability to add properties behind the scenes that can be referenced as part of the specific action.](http://johnliu.net/blog/2018/10/hiding-your-microsoft-flow-valuables-i-mean-variables-out-of-sight) With tracked properties, we can set variables such as time stamps, trigger headers and outputs, action outputs, or even previous tracked properties from earlier actions. Expressions, such as "utcNow, outputs, actions" can be used to track what normally wouldn't be stored in action inputs. [Tracked properties are packaged within a node in the action and can easily be referenced, reducing clutter.](https://powerusers.microsoft.com/t5/General-Power-Automate/Approval-Flow-Tracked-Properties/td-p/237387)
+**Tracked Properties** are part of every action within Power Automate. [They provide the ability to add properties behind the scenes that can be referenced as part of the specific action.](http://johnliu.net/blog/2018/10/hiding-your-microsoft-flow-valuables-i-mean-variables-out-of-sight) With tracked properties, we can set variables such as time stamps, capture trigger headers and outputs, action outputs, or even previous tracked properties from earlier actions. Expressions, such as "utcNow, outputs, actions" can be used to track what normally wouldn't be stored in action inputs. [Tracked properties are packaged within a node in the action and can easily be referenced, reducing clutter.](https://powerusers.microsoft.com/t5/General-Power-Automate/Approval-Flow-Tracked-Properties/td-p/237387)
+
+### Action Headers Example
 
 Consider the image below which shows capturing the status code and API throttle information for a List Records action in the **Common Data Service (current environment)** connector.
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate//TrackedProps/TrackedProperties-ActionAndActions.JPG"  />
 
-A key point here is that the action function will work for tracking current action data but not previous actions with the actions function. Attempting to do so will result in the **"Tracked properties can only reference its own action's inputs and outputs, trigger inputs and outputs and parameters."** error.
+The example image below, where we are performing a 'List records' with the **Common Data Service** connector, now has a more **friendly way of tracking the response code and API throttling response**. This is a light weight example but should drive home the concept of **how, using Tracked Properties, I can now reference the "*TrackedPropertiesExample*" variable which now includes outputs from a previous action**.
 
-<inser cde image TrackEdprop-action and actions>
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate//TrackedProps/TrackedProperties.CDS.Headers.JPG"  />
 
-<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate/PowerAutomate-Triggers-CDS.JPG" style="zoom:50%;" />
+NOTE: A key point here is that the action function will work for tracking current action data but not previous actions with the actions function. Attempting to do so will result in the **"Tracked properties can only reference its own action's inputs and outputs, trigger inputs and outputs and parameters."** error.
 
-Using "utcNow()" as a tracked property for an action creates an interesting result. At first impression, we would be led to believe this may represent the start time of an action. However, when reviewing the output this function actually produces the end time exactly as if we were to reference it from the output of the action. Consider the below gif:
+### Timestamp Example
+
+Using "**utcNow**()" as a tracked property for an action creates an interesting result. At first impression, we would be led to believe this may represent the start time of an action. However, when reviewing the output **this function actually produces the end time exactly as if we were to reference it from the output of the action**. Consider the below gif:
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate//TrackedProps/TrackedProperties-UtcNow-EndTime.gif"  />
 
@@ -28,80 +32,121 @@ You can see that the five second delay is showing the tracked property "FiveSeco
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate//TrackedProps/TrackedProperties-UtcNow-EndTimeCompareToStartTime.JPG"  />
 
-Finally, as we look to **Azure Logic Apps** and what may come with **Microsoft Power Automate**, we can see how tracked properties work with monitoring solutions. **Azure Logic Apps** can [connect to Azure Log Analytics natively](https://docs.microsoft.com/en-us/azure/logic-apps/monitor-logic-apps-log-analytics) to log logic app runs. One way to extend the information stored in the log store is to [use Tracked Properties](https://docs.microsoft.com/en-us/azure/logic-apps/monitor-logic-apps-log-analytics#extend-data). When
+Finally, as we look to **Azure Logic Apps** and what may come with **Microsoft Power Automate**, we can see how tracked properties work with monitoring solutions. **Azure Logic Apps** can [connect to Azure Log Analytics natively](https://docs.microsoft.com/en-us/azure/logic-apps/monitor-logic-apps-log-analytics) to log logic app runs. One way to extend the information stored in the log store is to [use Tracked Properties](https://docs.microsoft.com/en-us/azure/logic-apps/monitor-logic-apps-log-analytics#extend-data). 
 
 <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate//TrackedProps/logic-app-run-details.png"  />
 
-### Handling and Capturing Errors in Actions
+## Handling and Capturing Errors in Actions
 
 Typically **Microsoft Power Automate** flows will fail out if an issue occurs. Manually we can review these failures in the Power Automate Portal or with PowerShell. However inside the Power Automate flow we have the ability to track the *statusCode* within the actions function. Along with the **Configure Run After** setting we can conditionally capture any error messages and report or store for analysis.
 
 <img src="https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/PowerAutomate/MockError-HTTP-ConfigureRunAfter.JPG" />
 
-The Configure Run After setting allows the flow to continue if an error occurs. This can be used in conjunction with the below image showing a conditional based on status of the output body:
+**The Configure Run After setting allows the flow to continue if an error or timeout occurs**. This can be used in conjunction with the below image showing a conditional based on status code of a previous HTTP request output body:
 
 <img src="https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/PowerAutomate/MockError-HTTP-Designer-Conditional.JPG" />
 
-This documentation from Azure Logic Apps does a great job detailing the "run after" behavior.
+[This documentation from Azure Logic Apps](https://docs.microsoft.com/en-us/azure/logic-apps/logic-apps-exception-handling) does a great job detailing the "run after" behavior. Each action is marked with a status of "**Succeeded**", "**Failed**", "**Skipped**" or "**TimedOut**". The below image, from the Azure Logic App documentation, details how the "run after" behavior works in parallel branches.
 
-https://docs.microsoft.com/en-us/azure/logic-apps/logic-apps-exception-handling
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate/ErrorHandling/status-evaluation-for-parallel-branches.png"  />
 
+### Retry Policies
 
+Retry architectural patterns are nothing new in our continually evolving, interconnected world of dispersed systems. In [Robert Daigneau's excellent book "Service Design Patterns"](https://www.goodreads.com/book/show/10917482-service-design-patterns), he goes into great detail discussing various patterns. One such example to handle errors when connecting and processing integration requests and responses involving retry is the [Idempotent Retry pattern](http://www.servicedesignpatterns.com/WebServiceInfrastructures/IdempotentRetry). (pgs 206 - 212).
+
+In the case of **Microsoft Power Automate** and **Azure Logic Apps**, we have a feature called [Retry Policy](https://docs.microsoft.com/en-us/azure/logic-apps/logic-apps-exception-handling) which can be beneficial when working with integrations. Based on the status code returned (408, 429, 5xx, ect), the retry action can be configured to trigger a retry based on different intervals (Default, Exponential, Fixed). [The default policy is to send up to four retries scaled by 7.5 seconds.](https://docs.microsoft.com/en-us/azure/logic-apps/logic-apps-exception-handling)
 
 ### Mock Responses
 
-Integration actions can be simulate responses which can be helpful to troubleshoot without invoking a live system or for designing error handling.
+[Integration actions can be simulate responses](https://docs.microsoft.com/en-us/azure/logic-apps/test-logic-apps-mock-data-static-results) which can be helpful to troubleshoot without invoking a live system or for designing error handling.
 
 <img src="https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/PowerAutomate/MockError-DevOps-StaticResult.JPG" />
 
-### Try, Catch, Finally Pattern
+**These simulated responses can be used, similar to mocks, when developing custom APIs and are quite useful when building custom connectors**. The response can be successful, error prone, time out prone, etc based on the scenario. A specific status code and response can be added to help troubleshoot these specific scenarios.
 
-https://sharepains.com/2020/03/06/get-the-result-of-your-failed-actions/
+The image below shows setting up a failed mock response and the many different error codes. 
 
-### Result Function
+NOTE: **Depending on what connector you're using, you may not be able to use certain error codes.**
 
-https://docs.microsoft.com/en-us/azure/logic-apps/workflow-definition-language-functions-reference#result
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate/ErrorHandling/MockResponses.VariousErrorCodesAndMessages.JPG"  />
 
-https://docs.microsoft.com/en-us/azure/logic-apps/logic-apps-exception-handling#get-results-from-failures
+The below image shows mocking a **Common Data Service** [API throttled](https://docs.microsoft.com/en-us/powerapps/developer/common-data-service/api-limits#how-service-protection-api-limits-are-enforced) error response:
+
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate/ErrorHandling/MockResponses.Error.CDS.APIThrottled.JPG"  />
+
+This image shows mocking a **Common Data Service** [Too Many Concurrent Requests](https://docs.microsoft.com/en-us/powerapps/developer/common-data-service/api-limits#service-protection-api-limit-errors-returned) error response:
+
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate/ErrorHandling/MockResponses.Error.CDS.ConcurrentRequests.JPG"  />
+
+Finally, the below image shows the run history and capturing the error response from the **Common Data Service**:
+
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate/ErrorHandling/MockResponses.Error.CDS.ConcurrentRequests.Response.JPG" style="zoom: 80%;" />
 
 ### Throttling with Azure Logic Apps
 
-https://docs.microsoft.com/en-us/azure/logic-apps/handle-throttling-problems-429-errors
+Throttling in **Azure Logic Apps** has many facets and can stem from all sorts of potential areas. **Connectors can be throttled, destination APIs can be throttled** and depending if you're running in an **integration service environment (ISE)** or not can impact that. [Consider the following documentation in detail](https://docs.microsoft.com/en-us/azure/logic-apps/handle-throttling-problems-429-errors) when deciding an implementation approach with **Azure Logic Apps**. Scenarios such as dealing with **Azure Service Bus queues** are thoroughly examined (e.g. **using nested logic apps...this technique will work for Microsoft Power Automate as well!**)
 
-### Webhook Tester Site
+### Webhook Tester Site and runtime debugging
 
-To help with debugging, you can add diagnostic steps to a logic app workflow, along with reviewing the trigger and runs history. For example, you can add steps that use the [Webhook Tester](https://webhook.site/) service so that you can inspect HTTP requests and determine their exact size, shape, and format.
+The below reference and steps are taken from the [**Azure Logic Apps** document "Diagnosing Failures"](https://docs.microsoft.com/en-us/azure/logic-apps/logic-apps-diagnosing-failures#perform-runtime-debugging). This technique of using **the Webhook Tester site for debugging run time integrations** is very useful. **An added benefit is that the Webhook Tester site allows for both cloud and local based (e.g. Docker containers, Virtual Machines, etc).**
 
-1. Go to the [Webhook Tester](https://webhook.site/) site and copy the generated unique URL.
-2. In your logic app, add an HTTP POST action plus the body content that you want to test, for example, an expression or another step output.
-3. Paste your URL from Webhook Tester into the HTTP POST action.
-4. To review how a request is formed when generated from the Logic Apps engine, run the logic app, and revisit the Webhook Tester site for more details.
+*To help with debugging, you can add diagnostic steps to a logic app workflow, along with reviewing the trigger and runs history. For example, you can add steps that use the [Webhook Tester](https://webhook.site/) service so that you can inspect HTTP requests and determine their exact size, shape, and format.*
 
-### The Workflow Run Object
+1. *Go to the [Webhook Tester](https://webhook.site/) site and copy the generated unique URL.*
 
-To find out more about the specific run, you can cast the *workflow().run* object as a variable and view the properties. Run properties include the **id**, the **name**, and the **type**. This information, specifically the "**name**" property, can be correlated to the *ClientTrackingId* found in the **Get-FlowRun** cmdlet which we cover in the next article. 
+2. *In your logic app, add an HTTP POST action plus the body content that you want to test, for example, an expression or another step output.*
 
-<img src="https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/PowerAutomate/Workflow-Run-Overview.JPG" style="zoom:50%;" />
+3. *Paste your URL from Webhook Tester into the HTTP POST action.*
 
-ddddd
+4. *To review how a request is formed when generated from the Logic Apps engine, run the logic app, and revisit the Webhook Tester site for more details.*
+
+   [Perform runtime debugging]: https://docs.microsoft.com/en-us/azure/logic-apps/logic-apps-diagnosing-failures#perform-runtime-debugging	"Perform runtime debugging"
+
+   <img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate/ErrorHandling/Catch-Webhook-Tester-Site.JPG" style="zoom:50%;" />
+
+For more information, [review the documentation here.](https://docs.webhook.site/)
+
+**NOTE: This tool is useful for testing outside of Power Automate including any resource that has HTTP Post capabilities, examples including Azure Functions and GitHub Web hooks!**
+
+### Scopes and the Try, Catch, Finally Pattern
+
+[Using scopes](https://docs.microsoft.com/en-us/azure/logic-apps/logic-apps-exception-handling#evaluate-actions-with-scopes-and-their-results), actions can be [linked together](https://docs.microsoft.com/en-us/azure/logic-apps/logic-apps-control-flow-run-steps-group-scopes) in a logical group allowing for evaluation of multiple actions as a whole. This comes into play when working with exception and error handling. Scopes provide statuses similar to **Power Automate** flows or **Logic Apps** themselves such as "**Succeeded**", "**Failed**", "**Cancelled**", etc. **Pieter Veenstra** has a really nice approach, "[Get the result of your failed actions in Power Automate](https://sharepains.com/2020/03/06/get-the-result-of-your-failed-actions/)" for using scopes to implement a **Try, Catch, Finally** pattern which i'll discuss below.
+
+In the image below are three scope objects titled "**Try**", "**Catch**" and "**Finally**".
+
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate/ErrorHandling/TryCatchFinallyPattern.JPG"  />
+
+From a recent flow run, expanding the **Try** block, we can see two successful actions followed by our mocked failed response from the Common Data Service:
+
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate/ErrorHandling/Scopes.TryCatchExample.JPG"  />
+
+The **Catch** scope underneath the **Try** scope is using the run after property of the Try scope to **<u>catch results with a status of "Failed"</u>**. If any actions inside the Try scope, at least how this example is configured, fails, the Catch scope will begin processing. The remaining actions within the Try scope are not processed.
+
+Below is an image of **the Catch scope with Tracked Propertie**s:
+
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate/ErrorHandling/Action-Catch-TrackedProperties-Try.JPG"  />
+
+To work with the Try scope within the Catch scope, we will **use the results function which provides context to what happened within the Try scope**.
+
+### Result Function
+
+The [results()](https://docs.microsoft.com/en-us/azure/logic-apps/workflow-definition-language-functions-reference#result) function, as shown in the reference link, **returns an array object**. At first glance this seems fairly straight forward until we dig deeper into the [context of the results output](https://docs.microsoft.com/en-us/azure/logic-apps/logic-apps-exception-handling#get-results-from-failures). The actions returned with the results function [include the standard properties listed in Part 1](https://community.dynamics.com/crm/b/crminthefield/posts/monitoring-the-power-platform-power-automate---run-time-part-1-triggers-workflows-and-actions#actions) such as start and end time and tracking identifiers. You'll also see that they include properties indicating if they were successful or not. 
+
+The image below shows a successful action named "successful_try_action" and a failed action named "Condition". Each action includes two properties, **code** and **message** that can be used [to filter the array](https://docs.microsoft.com/en-us/azure/logic-apps/logic-apps-perform-data-operations#filter-array-action). The *successful action is in green while the failed action is in red*.
+
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate/ErrorHandling/Result-CatchMultipleTry-SuccessAndFailure.JPG"  />
+
+Finally, the below gif shows **working with the Try, Catch, Finally pattern and scope and results objects to capture and report**. This technique can be continued to then **send data to Azure Application Insights or Azure Log Analytics** as briefly shown below. I'll cover this in an upcoming article!
 
 
 
-### Utilizing a system provided Correlation Id
-
-Power Automate also includes its own correlation identifiers as referenced in the Get-FlowRun cmdlet as part of the *ClientTrackingId*. This identifier can be obtained in the flow itself by use of the outputs object. Consider using this or a custom tracking identifier when working with external integrations to assist with application and workload monitoring. By implementing this early, the beginnings of an application map can appear when working with Azure Application Insights.
-
-<insert app map image>
-
-<img src="https://raw.githubusercontent.com/wiki/aliyoussefi/D365-Monitoring/Artifacts/PowerAutomate/Trigger-Object-Recurrance-JSON.JPG" style="zoom:50%;" />
-
-
+<img src="https://raw.githubusercontent.com/aliyoussefi/MonitoringPowerPlatform/master/Artifacts/PowerAutomate/ErrorHandling/ErrorHandling-Scopes-Try-ResultFunction.gif"  />
 
 ## Next Steps
 
-In this article we have covered foundational information and concepts for **Connectors**, **Connections** and **Data Loss Prevention Policies**. We have discussed some of the boundaries and limitations to be aware of. Examples of working with the **Power Apps Admin Portal** as well as the **PowerApps Administration PowerShell modules** were examined.
+In this article we have discussed tracking properties across actions to help supplement reporting. When examining error handling and preparing for designing resilient **Microsoft Power Automate** flows we examined various patterns. Utilizing **retry policies**, configuring the **run after conditions** and **implementing scope** can all help build an enterprise ready flow. 
 
-This article is a good starting point to better understanding how to work with powerful connectors such as the **Power Automate Management and Admin connectors** referenced in a future article. The article also begins the journey into the **Power Automate API** and how **solution layers can impact changes to components**.
+In previous articles, [we discussed how to **evaluate workflows, triggers and run functions to help deliver insights**](https://community.dynamics.com/crm/b/crminthefield/posts/monitoring-the-power-platform-power-automate---run-time-part-1-triggers-workflows-and-actions). In the following articles covering **Microsoft Power Automate Flow** run time, we will discuss **pushing events to Application Insights and reviewing previous flow runs for monitoring and governance**.
 
 If you are interested in learning more about [**specialized guidance and training** for monitoring or other areas of the Power Platform](https://community.dynamics.com/crm/b/crminthefield/posts/pfe-dynamics-365-service-offerings), which includes a [monitoring workshop](https://community.dynamics.com/cfs-file/__key/communityserver-blogs-components-weblogfiles/00-00-00-17-38/WorkshopPLUS-_2D00_-Dynamics-365-Customer-Engagement-Monitoring-with-Application-lnsights-1-Day-with-Lab_2D00_FA5D599F_2D00_20E4_2D00_4087_2D00_A713_2D00_39FBD14DF7E5.pdf), please contact your **Technical Account Manager** or **Microsoft representative** for further details. 
 
