init commit of Power Apps Portal and App Insights doc

--- a/docs/02.01 - Monitoring Power Apps Portal.md
+++ b/docs/02.01 - Monitoring Power Apps Portal.md
@@ -5,7 +5,7 @@ Instrumentation of Power Apps Canvas Applications is a feature first released in
 
 Considering the importance and interest in audit and activity logging, this article will briefly touch on how to gather this information from the Office 365 Security and Compliance Center.
 
-## What are Canvas Apps
+## What is Power Apps Portal
 
 Power Apps Canvas Apps represent a no or low code approach to building and delivering modern applications for makers. The requirements of knowing programming languages such as C# have been removed allowing makers of virtually any background to build apps. These apps can be used with connectors to hundreds of connectors allowing for a flexible user interface layered on top of data sources. Apps can also be generated from data sources automatically allowing you to quickly create and deploy an application to your team or customers. Reference: https://docs.microsoft.com/en-us/powerapps/maker/canvas-apps/getting-started
 
@@ -15,10 +15,119 @@ For example, imagine having an excel spreadsheet your team works on to track exp
 
 Finally, the Canvas App community is extensive and a great place to collaborate and contribute ideas and discussions: https://aka.ms/powerapps-community
 
-## Power Apps Analytics
+## What is Azure Application Insights
+
+![ ](https://community.dynamics.com/resized-image/__size/320x240/__key/communityserver-blogs-components-weblogfiles/00-00-00-17-38/2262.pastedimage1589496009445v17.png)
+
+[Azure Application Insights is an extensible Application Performance Management (APM) service](https://docs.microsoft.com/en-us/azure/azure-monitor/app/app-insights-overview) that can be used to monitor applications, tests, etc. **Azure Application Insights** can be used with any application hosted in any environment. Depending on what's being monitored there are SDKs available. For other applications connections and message delivery can be programmed using the REST APIs available.
+
+For Power Platform components, Application Insights is recommended due to its direct integration with Power Apps features and tools and its capabilities to deliver to the API.
+
+Once we begin sending telemetry to Application Insights we can review in real time availability tests, user actions, deployment metrics as well as other feedback from our applications. Connecting our messages with correlation identifiers allows us a holistic view into how our apps are interdependent upon each other. This provides the transparency desired and honestly needed with modern era technology.
+
+## Adding a Power Apps Portal to a Power Platform Environment
+
+To begin working with **Power Apps Portal**, navigate to the **Maker Portal** and add a new application. This is similar to adding a new Model or Canvas Driven application within the Maker Portal.
+
+<insert new app image>
+
+Go through the provisioning wizard to define the basic characteristics of your Power Apps Portal including a name, the URL and what language or region to use. [Here is a reference to a step by step guide to provisioning the portal](https://docs.microsoft.com/en-us/powerapps/maker/portals/create-portal) that includes important considerations.
+
+When initially configured and provisioned, a new **Model Driven Power Application** titled '***Portal Management***' will appear. This application will serve as the primary customization point for makers and portal developers. This will also be where **Azure Application Insights** will be configured to work within **Power Apps Portals**.
+
+<insert portal mgmt app>
+
+NOTE: If your **Power Platform** environment has migrated from **Dynamics 365** and included **Dynamics 365 Portals** you may see the **Model Driven Application** called '***Dynamics 365 Portals***'.
+
+<insert dynamics 365 portal app>
+
+## Adding Azure Application Insights to Power Apps Portal
+
+Similiar to web based application encompassing HTML, CSS and JavaScript, Power Apps Portal pages can be injected with the Azure Application Insights JavaScript SDK. **Oleksandr Olashyn's** article "[PowerApps Portals tracking using Azure Application Insights](https://www.dancingwithcrm.com/powerappsportals-tracking-using-azure-app-insights/)" does a great job detailing provisioning **Azure Application Insights** and adding the JavaScript SDK that I describe in this section.
+
+### Open the Portal Management Power App
+
+When a **Power Apps Portal Application** is added to a **Power Platform** environment a **Model Driven Application** titled '***Portal Management***' will also be added. To add **Azure Application Insights**, begin by playing the '***Portal Management***' app.
+
+Once the application has loaded, locate the 'Enable Traffic Analytics' sub area within the Administration group on [the site map](https://docs.microsoft.com/en-us/powerapps/maker/model-driven-apps/create-site-map-app) and open. 
+
+<insert enable traffic analy image>
+
+### Add the Azure Application Insights SDK
+
+The Portal Analytics page will prompt makers to choose a portal, depending if multiples exist, and an area to include the Azure Application Insights snippet.
+
+<insetportal anly image>
+
+To locate the Azure Application Insights JavaScript SDK snippet, two primary options exist: [reference the official Microsoft Docs site](https://docs.microsoft.com/en-us/azure/azure-monitor/app/javascript#snippet-based-setup) or [go to the GitHub repository](https://github.com/microsoft/ApplicationInsights-JS#snippet-setup-ignore-if-using-npm-setup). As referenced in the Power Apps Component Framework article, I tend to go with the GitHub repository but either will work.
+
+NOTE: The version of the SDK may change, the current version of this writing is 2.5.6. [For the most current release, refer to this reference](https://github.com/microsoft/ApplicationInsights-JS/releases).
+
+When adding the Azure Application Insights SDK snippet, the application is updating a **adx_contentsnippet** entity record titled '***Tracking Code***'.
+
+### Configure the Azure Application Insights SDK
+
+Once the snippet for the JavaScript SDK has been added, it needs to be configured to point to the organization's Azure Application Insights resource. The instrumentation key is a 32 digit GUID located on the Overview page of the Azure Application Insights resource.
+
+<insert instrumentation key>
+
+The instrumentation key will need to be added to the telemetry client's configuration property 'instrumentationKey' as shown below.
+
+```
+cfg: { // Application Insights Configuration    instrumentationKey: "YOUR_INSTRUMENTATION_KEY_GOES_HERE"    /* ...Other Configuration Options... */ }});
+```
+
+Once the instrumentation key has been added and the changes have been applied to the Power Apps Portal, telemetry will begin to flow to Azure Application Insights. With that in mind, as discussed in previous articles, enriching the messages sent is key to optimizing the various features of Azure Application Insights. Continuing that train of thought, let's explore some options Power Apps Portal will allow for enrichment.
+
+## Enriching the Power Apps Portal Messages
+
+### Working with Liquid Templating Objects
+
+Liquid Templating allows makers and developers to add contextual information dynamically to **Power Apps Portal** web pages. Logged in user information, site settings, **Common Data Service** data, etc can all be referenced. For example, to work with user contextual information, [refer to this article](https://docs.microsoft.com/en-us/powerapps/maker/portals/liquid/liquid-objects#user), which describes user as an entity object (contact). 
+
+Below is an example of referencing a logged in user's information to set the authenticated user context within the Application Insights telemetry client.
+
+### Working with Portal Web Page Variables
+
+The window object on each Power Apps Portal web page contains a Microsoft object which includes information about the portal and user. I haven't seen this documented so I would not rely on it being supported.
+
+<insert microsoft object image>
+
+Using this object we can set the "ai.cloud.role" or other contextual attributes to set the type of Portal:
+
+<insert Fiddler image of CustomerPortal image>
+
+## Reviewing Initial Messages in Azure Application Insights
+
+Now that the Azure Application Insights snippet has been added, the configuration established and the context enriched, the final step to getting started is to review messages. Navigating to the Azure Portal and Application Insights scripts, we can write basic Kusto queries to see our users interaction with the portal.
+
+<insert app insights image>
+
+Portal, being a Web App by nature, works really well with various features of Azure Application Insights. Some highlights include User Session Timelines and User Flows. These features tend to provide a good visualization and help answer questions like "***where do my users typically go from the home page?***" or "***how long were they on a page before navigating away?***"
+
+<insert session image>
+
+<insert user flow image>
+
+## Next Steps
+
+ 
+
+https://stoneridgesoftware.com/using-liquid-templates-and-fetchxml-to-retrieve-data-in-a-dynamics-365-online-portal/
+
+In this article we have discussed how to set up Azure Application Insights with Power Apps Portals. We covered using the content snippet to add the Azure Application Insights JavaScript SDK. We discussed how to extend the SDK to include values from liquid templating and window objects. Finally we reviewed page views and how they can represented in Application Insights.
+
+For next steps, continue exploring liquid templating and how to continuous enrich your messages sent to Azure Application Insights. Consider the custom property and metrics bag and how these can be supplmented with Common Data Service content or browser resource timings. Continuing this series we will cover how to implement and use Azure Blob Storage for diagnostic logging.
+
+If you are interested in learning more about [**specialized guidance and training** for monitoring or other areas of the Power Platform](https://community.dynamics.com/crm/b/crminthefield/posts/pfe-dynamics-365-service-offerings), which includes a [monitoring workshop](https://community.dynamics.com/cfs-file/__key/communityserver-blogs-components-weblogfiles/00-00-00-17-38/WorkshopPLUS-_2D00_-Dynamics-365-Customer-Engagement-Monitoring-with-Application-lnsights-1-Day-with-Lab_2D00_FA5D599F_2D00_20E4_2D00_4087_2D00_A713_2D00_39FBD14DF7E5.pdf), please contact your **Technical Account Manager** or **Microsoft representative** for further details.
+
+Your feedback is **extremely valuable** so please leave a comment below and I'll be happy to help where I can! Also, if you find any inconsistencies, omissions or have suggestions, [please go here to submit a new issue](https://github.com/aliyoussefi/MonitoringPowerPlatform/issues).
+
+## Index
+
+ 
+
+[Monitoring the Power Platform: Introduction and Index](https://community.dynamics.com/crm/b/crminthefield/posts/monitoring-the-power-platform-introduction)
 
 
 
-
-
-https://docs.microsoft.com/en-us/power-platform/admin/analytics-powerapps
