portal title change and sample code check in

--- a/docs/02.01 - Monitoring Power Apps Portal.md
+++ b/docs/02.01 - Monitoring Power Apps Portal.md
@@ -1,4 +1,4 @@
-# Monitoring the Power Platform: For PowerApps Portal
+# Monitoring the Power Platform: PowerApps Portal - Implementing Application Insights
 ## Summary
 
 Instrumentation of Power Apps Canvas Applications is a feature first released in a preview of the Release Wave 1 for 2020. This out of the box capability allows for the capturing and examination of usage and performance metrics. This article will focus on current tooling available and describing the steps to setup Azure Application Insights within a Canvas Application. We will also examine the currently available events and metrics sent from an application and how to work with the Monitoring Tool.
@@ -97,6 +97,8 @@ Using this object we can set the "ai.cloud.role" or other contextual attributes 
 
 <insert Fiddler image of CustomerPortal image>
 
+
+
 ## Reviewing Initial Messages in Azure Application Insights
 
 Now that the Azure Application Insights snippet has been added, the configuration established and the context enriched, the final step to getting started is to review messages. Navigating to the Azure Portal and Application Insights scripts, we can write basic Kusto queries to see our users interaction with the portal.
@@ -108,6 +110,12 @@ Portal, being a Web App by nature, works really well with various features of Az
 <insert session image>
 
 <insert user flow image>
+
+## Sample Code
+
+The sample code used in this article can be found in the MonitoringPowerPlatform GitHub repo located here.
+
+
 
 ## Next Steps
 
